@@ -10,6 +10,7 @@ systemd System and Service Manager
     - don't output sysctl keys to terminal at startup;
  * busctl:
     - remove pager;
+    - remove machine argument option
  * bugfix:
     - fix open syslog stdout socket on execute;
  * remove bootctl program;
